# can_parser

./: ADVANCED_BATCH_ARCHITECTURE.md  BATCH_ARCHITECTURE_ANALYSIS.md  BATCH_CONCURRENT_PERFORMANCE_ANALYSIS.md  BATCH_OPTIMIZATION_SUMMARY.md  CONCURRENT_PARSING_ANALYSIS.md  Cargo.toml  FINAL_PERFORMANCE_COMPARISON.md  LARGE_SCALE_800_FILES_PERFORMANCE_REPORT.md  LIBRARY_OPTIMIZATION.md  LINUX_DEPLOYMENT_GUIDE.md  OPTIMIZATION.md  PERFORMANCE_EVALUATION.md  README.md  RUST_KNOWLEDGE_GUIDE.md  TEST_DATA_ANALYSIS_REPORT.md  ULTRA_FAST_USAGE.md  ULTRA_PERFORMANCE_REPORT.md  build.zig  build.zig.zon  create_large_test.py  create_test_files.py  result.md  simple.dbc  task.md  test_example.dbc
.zig-cache/o/1abb277bf35b9accb70aa9660af267f4/: can_parser
.zig-cache/o/a1956e08df97b4154f00eeb5ff900978/: can_parser
.zig-cache/o/e8b16912c6909bc852bd49327ff1f65d/: can_parser
src/: async_pipeline.rs  batch_concurrent_parser.rs  benchmark.rs  can.zig  concurrent_frame_parser.rs  config.rs  dbc_parser.rs  file_cache.rs  frame_parser.rs  high_performance_optimizer.rs  main.rs  main.zig  memory_pool.rs  metrics.rs  performance_test.rs  ultra_fast_worker.rs  worker.rs
